[project]
name = "ThreeDistVis"
version = "0.1.0"
description = "Visualize three normal distributions with GMM classification for Power BI, Streamlit, and Tableau"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
threedistvis = "threedistvis.main:main"

[tool.setuptools]
packages = ["threedistvis"]